# rag-services

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  chunks.py  debug.py  documents.py  faqs.py  industries.py  knowledge_sets.py  unanswered.py
backend/app/core/: config.py  context.py  db.py  deps.py  limiter.py  safety.py  security.py
backend/app/models/: __init__.py  feedback.py  industry.py  knowledge.py  session.py  tenant.py
backend/app/schemas/: auth.py  chat.py  industry.py  knowledge.py
backend/app/services/: bm25.py  cache.py  chunk_ops.py  chunker.py  document_pipeline.py  embeddings.py  faq.py  feedback.py  file_guard.py  llm.py  parser.py  rag.py  reranker.py  retriever.py  storage.py  url_guard.py  vector_store.py
backend/scripts/: preload_models.py  smoketest.py  smoketest_security.py  smoketest_v2.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  sse.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Chat.tsx  DocumentDetail.tsx  Documents.tsx  FAQs.tsx  Industries.tsx  KnowledgeSets.tsx  Login.tsx  Tenants.tsx  Unanswered.tsx
frontend/src/store/: auth.ts
