[project]
name = "rag-backend"
version = "0.1.0"
description = "Multi-tenant RAG service for customer support"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.0.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "redis>=5.0.7",
  "arq>=0.26.1",
  "qdrant-client>=1.11.0",
  "minio>=7.2.7",
  "dashscope>=1.20.0",
  "openai>=1.50.0",
  "fastembed>=0.3.6",
  "pypdf>=4.3.0",
  "python-docx>=1.1.2",
  "markdown-it-py>=3.0.0",
  "beautifulsoup4>=4.12.3",
  "structlog>=24.4.0",
  "tenacity>=8.5.0",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "cachetools>=5.5.0",
  "slowapi>=0.1.9",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
]
